--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ build-backend = "setuptools.build_meta"
 name = "app"
 version = "0.0.1"
 dependencies = [
-  "make87",
-  "make87_messages",
+  "make87[zenoh,protobuf]==0.1.0.dev2",
+  "make87-messages-pb5",
+  "fastapi",
+  "uvicorn"
 ]
 description = "A small example package"
 readme = "README.md"
