--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
   "make87[zenoh,protobuf]==0.1.0.dev2",
   "make87-messages-pb5",
   "fastapi",
-  "uvicorn"
+  "uvicorn[standard]"
 ]
 description = "A small example package"
 readme = "README.md"
